Studio light editor stays enabled on restart #65308

Closed
opened 2019-05-30 14:50:19 +02:00 by Zachary · 4 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-30 11:43, hash: 296527eab7

Short description of error
The Studio light editor stays enabled if you close and restart Blender. Not sure if this is on purpose ,but you would think it would be disabled when you restart.

Exact steps for others to reproduce the error
1: Enabled studio light editor
2: Restart Blender
3: Studio light editor will still be enabled.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-30 11:43, hash: `296527eab7` **Short description of error** The Studio light editor stays enabled if you close and restart Blender. Not sure if this is on purpose ,but you would think it would be disabled when you restart. **Exact steps for others to reproduce the error** 1: Enabled studio light editor 2: Restart Blender 3: Studio light editor will still be enabled.
Author

Added subscriber: @AFWS

Added subscriber: @AFWS
Author

OK, I think I know what's up. I think I saw somewhere where preferences is now auto saved. Haven't found the setting yet ,but don't think that should be on by default.

OK, I think I know what's up. I think I saw somewhere where preferences is now auto saved. Haven't found the setting yet ,but don't think that should be on by default.

This issue was referenced by 3f23299403

This issue was referenced by 3f23299403d4f20fa5c8ef799bde940d0c291228
Brecht Van Lommel self-assigned this 2019-05-31 18:11:05 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65308
No description provided.