Fix T65308: edit studio light state stays active after restarting Blender

This is only temporary for editing, should not be preserved.